--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,8 @@
         "middlewares": "src/middlewares",
         "router": "src/router",
         "utils": "src/utils",
-        "constants": "src/constants"
+        "constants": "src/constants",
+        "infrastructure": "src/infrastructure"
       }
     }]
   ]
